# anton

./: .gitignore  Cargo.toml  ansible.cfg  makefile  pyproject.toml  requirements.txt
design/: architecture.md  data_structures.md  diagrams.md  feedback_channel.md  simulcast.md  testing_and_deployment.md  todo.md
examples/simple-sfu/: main.rs
examples/simulcast-demo/: main.rs
kolla-configs/: inventory.ini  inventory.ini.tmp
kolla-configs/etc/kolla/: admin-openrc-system.sh  admin-openrc.sh  clouds.yaml  globals.yml  public-openrc-system.sh  public-openrc.sh
kolla-configs/etc/kolla/group_vars/: compute.yml  monitoring.yml
playbooks/create-bridge/: inventory.ini  netplan_template.j2  setup_bridge.yml
playbooks/ping/: inventory.ini
src/: lib.rs  sfu.rs
src/bandwidth/: mod.rs
src/connection/: mod.rs
src/feedback/: mod.rs
src/media/: codec.rs  frame.rs  mod.rs  rtp.rs
src/session/: mod.rs
src/signaling/: mod.rs
src/simulcast/: mod.rs
src/stats/: mod.rs
src/transport/: adaptation.rs  integration.rs  mod.rs  quic.rs
