[package]
name = "rust-sfu-iroh"
version = "0.1.0"
edition = "2021"
authors = ["SFU Developer"]
description = "A Selective Forwarding Unit (SFU) implemented in Rust using iroh for media over QUIC"
license = "MIT OR Apache-2.0"

[dependencies]
# Iroh dependencies
iroh = "0.34.0"
iroh-roq = "0.1.0"

# Async runtime
tokio = { version = "1.36.0", features = ["full", "tracing"] }
futures = "0.3.30"
futures-concurrency = "7.4.3"
async-trait = "0.1.77"

# Media processing
webrtc-media = "0.9.0"
opus = { version = "0.3.0" }
cpal = "0.15.2"

# RTP/RTCP
webrtc-util = "0.7.0"

# Networking
bytes = "1.5.0"
quinn = "0.10.2"

# Utilities
anyhow = "1.0.79"
thiserror = "1.0.56"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
clap = { version = "4.4.18", features = ["derive"] }

[dev-dependencies]
tracing-test = "0.2.4"
testresult = "0.3.0"
tokio-test = "0.4.3"

[features]
default = []
webrtc-processing = []
simulcast = []

[workspace]
members = ["."]

[[bin]]
name = "anton-sfu"                   # This will be the executable name (e.g., target/debug/anton-sfu)
path = "examples/simple-sfu/main.rs" # Point to the main file of the simple-sfu example

[[example]]
name = "simple-sfu"
path = "examples/simple-sfu/main.rs"

[[example]]
name = "simulcast-demo"
path = "examples/simulcast-demo/main.rs"
