[project]
name = "hail-mary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ansible>=11.8.0",
    "autopage>=0.5.2",
    "cliff>=4.10.0",
    "kolla-ansible>=20.1.0",
    "pbr>=6.1.1",
    "python-neutronclient>=11.6.0",
    "python-openstackclient>=8.1.0",
    "stevedore>=5.4.1",
]
